correctif finaux margin des collapse

--- a/src/styles/About.sass
+++ b/src/styles/About.sass
@@ -19,6 +19,6 @@
     .collapse-content
         margin-bottom: 25px
     .collapse
-        margin-bottom: 40px
+        margin-bottom: 20px
     @include respond-to(mobile)
         margin: 0
