--- a/src/styles/Collapse.sass
+++ b/src/styles/Collapse.sass
@@ -60,9 +60,11 @@
         list-style: none
         padding: 25px 28px 20px 20px
         line-height: 25px
+        display: none
 
         &.open
             max-height: 5000px
+            display: block
         
         @include respond-to(mobile)
             font-size: 13px
