--- a/src/styles/Layout.sass
+++ b/src/styles/Layout.sass
@@ -38,6 +38,7 @@ nav
 
   @include respond-to(mobile)
     gap: 26px
+    font-weight: $FontWeightBold
      
 
 .Footer
