--- a/src/styles/Logement.sass
+++ b/src/styles/Logement.sass
@@ -15,12 +15,14 @@
     
     .collapse
         width: 50%
+        margin-bottom: 20px
         @include respond-to(mobile)
             width: 100%
 
     @include respond-to(mobile)
         flex-direction: column
         gap: 0px
+        margin-bottom: 27px
         
     
     .collapse-content
